--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,6 +67,14 @@
     width: 100%;
 }
 
+.searchBarContainer {
+    width: 50%;
+}
+
+.searchBar {
+
+}
+
 .footer {
     background-color: burlywood;
 }
