--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,7 +56,7 @@
 }
 
 .product:hover {
-    box-shadow: 0px 0.5px 0px 1.25px silver;
+    box-shadow: 0px 0.5px 0px 1.25px #c4c3c3;
 }
 
 .product .product-body {
@@ -88,7 +88,7 @@
 
 .searchBarContainer button {
     background-color: burlywood;
-    color: #f0f0f0;
+    color: #ffffff;
     padding: 3px 6px;
     width: 30%;
     transition: 0.8s;
@@ -112,7 +112,25 @@
 }
 
 .filters {
-    padding: 4%;
+    border: 1px solid gainsboro;
+    border-radius: 5px;
+    background-color: white;
+    padding: 2.5%;
+    margin: 0;
     width: 20%;
+    height: 50%;
+}
+
+.filters form button {
+    background-color: burlywood;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 3px 6px;
+    width: 50%;
+    transition: 0.8s;
+}
+
+.filters form button:hover {
+    background-color: saddlebrown;
 }
 
