--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@
     flex-direction: row;
     justify-content: start;
     align-content: space-around;
-    width: 80%;
+    width: 79%;
 }
 
 .userContainer {
@@ -109,6 +109,7 @@
     justify-content: space-between;
     align-content: center;
     width: 100%;
+    margin: 0.5%;
 }
 
 .filters {
