--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,7 +99,7 @@
 }
 
 .footer {
-    background-color: burlywood;
+    background-color: rgb(231, 231, 231);
 }
 
 .products-container {
@@ -135,3 +135,81 @@
     background-color: saddlebrown;
 }
 
+.login-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;   
+}
+
+.login-container .login-box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center; 
+    width: 50%;
+    background-color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #c4c3c3;
+    border-radius: 6px;
+}
+
+.login-container .login-brand {
+    margin-top: 7.5%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.login-container .login-message {
+    margin: 5% auto;
+}
+
+.login-container .login-body {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center; 
+    width: 100%;
+    background-color: #ffffff;
+    margin: 1.25% auto;
+}
+
+.login-container .login-credentials {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: start; 
+    width: 100%;
+    background-color: #ffffff;
+    margin: 0.5% auto;
+}
+
+.login-container .login-credentials .email {
+    width: 100%;
+    background-color: #ffffff;
+    margin: 5% auto;
+}
+
+.login-container .login-credentials .password {
+    width: 100%;
+    background-color: #ffffff;
+    margin: 0.5% auto;
+}
+
+.extra {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: start; 
+    width: 100%;
+    background-color: #ffffff;
+    margin: 0.5% auto;
+
+}
+
+.login-container .login-credentials .extra {
+    width: 100%;
+    background-color: #ffffff;
+    margin: 0.5% auto;
+}
