--- a/resources/views/ben's changes/NavBar.html
+++ b/resources/views/ben's changes/NavBar.html
@@ -8,7 +8,7 @@ body {
   font-weight: normal;
 }
 
-ul {
+ul.navbar-structure {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -29,7 +29,7 @@ li a {
   font-size: 20px;
 }
 
-li b {
+li.navbar-link b {
   display: block;
   color: #000;
   padding-left: 30px;
@@ -39,12 +39,12 @@ li b {
   font-size: 17px;
 }
 
-li a.active, b.active {
+li.navbar-link a.active, b.active {
   background-color: #deb887;
   color: white;
 }
 
-li a:hover:not(.active), b:hover:not(.active){
+li.navbar-link a:hover:not(.active), b:hover:not(.active){
   background-color: #e9ecef;
   color: white;
 }
@@ -52,16 +52,17 @@ li a:hover:not(.active), b:hover:not(.active){
 </head>
 <body>
 
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#products">Products</a></li>
-  <li><b href="#chairs">Chairs</b></li>
-  <li><b href="#tables">Tables</b></li>
-  <li><b href="#beds">Beds</b></li>
-  <li><b href="#sofas">Sofas</b></li>
-  <li><a href="#about">About Us</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#orders">Orders</a></li>
+<ul class="navbar-structure">
+  <li class="navbar-link"><a class="active" href="#home">Home</a></li>
+  <li class="navbar-link"><a href="#products">Products</a></li>
+  <li class="navbar-link"><b href="#chairs">Chairs</b></li>
+  <li class="navbar-link"><b href="#tables">Tables</b></li>
+  <li class="navbar-link"><b href="#beds">Beds</b></li>
+  <li class="navbar-link"><b href="#sofas">Sofas</b></li>
+  <li class="navbar-link"><a href="#about">About Us</a></li>
+  <li class="navbar-link"><a href="#contact">Contact</a></li>
+  <li class="navbar-link"><a href="privacy">Privacy Policy</a></li>
+  <li class="navbar-link"><a href="#orders">Orders</a></li>
 </ul>
 
 <div style="margin-left:25%;padding:1px 16px;height:1000px;">
